# mycraft-vulkan

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
include/mycraft-vulkan/: CMakeLists.txt  app.hpp  constants.hpp  formatters.hpp  glfw-helpers.hpp  leaf-healpers.hpp  logger.hpp
src/: CMakeLists.txt  main.cpp
